--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 
   <header>
     <img src="./images/pokemon.svg.png" alt="Pokemon Logo">
-    <h1 id="logo">Pokemon!</a></h1>
-    <p>Refresh the page to return to full list</p>
+    <p id="subtitle">Refresh the page to return to full list</p>
   </header>
 
   <form>
