moved index.html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <p id="subtitle">Refresh the page to return to full list</p>
   </header>
 
-  <form>
+  <div id='buttons-div'>
     <label for="Poke-DropDown"></label>
     <select id="Poke-DropDown">
       <option disabled selected value> -- select an option -- </option>
       <!-- Dynamic options added in here -->
     </select>
-    <input type="button" id="clear-filter-list-views" value="Clear Filter">
-  </form>
+  <button id="clear-filter-list-views">Clear Filter</button>
+</div>
+
 
   <div id="wrapper">
 
