edited image logo path in index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <img src="./images/pokemon.svg.png" alt="Pokemon Logo">
+    <img src="public/images/pokemon.svg.png" alt="Pokemon Logo">
     <p id="subtitle">Refresh the page to return to full list</p>
   </header>
 
