--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="public/css/main.css">
-  <!-- <script src="js/bundle.js"></script> -->
+  <script src="public/js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <title>Pokemon!</title>
 </head>
